# OOP-Labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  function.cpp  main.cpp  test.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: seven.hpp
lab2/src/: seven.cpp
lab2/test/: test.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/include/: figure.hpp  octagon.hpp  square.hpp  triangle.hpp
lab3/src/: figure.cpp  octagon.cpp  square.cpp  triangle.cpp
lab4/: .gitignore  CMakeLists.txt  input.txt
lab4/include/: array.hpp  figure.hpp  octagon.hpp  point.hpp  square.hpp  triangle.hpp
lab4/src/: main.cpp
lab4/test/: test.cpp
lab5/: CMakeLists.txt
lab5/include/: allocator.hpp  container.hpp  forward_list.hpp
lab5/src/: main.cpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  druid.cpp  druid.hpp  main.cpp  npc.cpp  npc.hpp  squirrel.cpp  squirrel.hpp  werewolf.cpp  werewolf.hpp
lab7/: CMakeLists.txt  druid.cpp  druid.hpp  factory.hpp  main.cpp  npc.cpp  npc.hpp  squirrel.cpp  squirrel.hpp  tests.cpp  visitor.hpp  werewolf.cpp  werewolf.hpp
